[gd_scene load_steps=43 format=2]

[ext_resource path="res://Picsart_23-10-15_11-32-51-028.png" type="Texture" id=1]
[ext_resource path="res://Picsart_23-10-15_14-12-18-446.png" type="Texture" id=2]
[ext_resource path="res://Picsart_23-10-15_11-09-17-182.png" type="Texture" id=3]
[ext_resource path="res://IMG-20231018-WA0002-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Picsart_23-10-15_14-09-15-439.png" type="Texture" id=5]
[ext_resource path="res://wesdfzvd.jpg" type="Texture" id=6]
[ext_resource path="res://Line 1.png" type="Texture" id=7]
[ext_resource path="res://Rectangle 1.png" type="Texture" id=8]
[ext_resource path="res://font/CircularStd-Black.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://level1 run/soal(ether2).gd" type="Script" id=10]
[ext_resource path="res://font/Bubblegum.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Bubblegum.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Media2.mp3" type="AudioStream" id=13]
[ext_resource path="res://level1 run/Picsart_23-12-17_10-29-39-701.png" type="Texture" id=14]
[ext_resource path="res://level1 run/LEVEL 1.gd" type="Script" id=15]
[ext_resource path="res://level1 run/soal(modem).gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 50
extra_spacing_top = 25
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.54902, 0.435294, 0.866667, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=20]
size = 35
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=18]
size = 21
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.109804, 0.556863, 0.878431, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=21]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=23]
size = 22
extra_spacing_top = 8
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.54902, 0.435294, 0.866667, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 150
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=17]
size = 180
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=15]
size = 150
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.866667, 0.866667, 0.866667, 1 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=24]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.661998, 0.803711, 0.548627, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.270588, 0.466667, 0.113725, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.427451, 0.803922, 0.129412, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 6

[sub_resource type="DynamicFont" id=29]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0, 0.404663, 0.796875, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=30]
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.466667, 0.298039, 0.937255, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=32]
size = 29
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=33]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 15 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1300.0
margin_bottom = 690.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="modem" type="Sprite" parent="."]
position = Vector2( 142, 327 )
scale = Vector2( 0.368656, 0.283829 )
texture = ExtResource( 4 )

[node name="IP" type="Label" parent="modem"]
margin_left = 173.604
margin_top = 49.3256
margin_right = 503.604
margin_bottom = 114.326
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "IP (modem):"
align = 1

[node name="SOAL" type="Label" parent="modem/IP"]
margin_left = 347.207
margin_top = -17.6163
margin_right = 827.207
margin_bottom = 88.3837
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
align = 1
script = ExtResource( 16 )

[node name="mikrotikos" type="Sprite" parent="."]
position = Vector2( 396, 465 )
scale = Vector2( 0.241883, 0.185502 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="mikrotikos"]
margin_left = -128.161
margin_top = 210.24
margin_right = 232.839
margin_bottom = 275.24
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Mikrotik OS"
align = 1

[node name="ether 1" type="Sprite" parent="."]
position = Vector2( 250.51, 475.084 )
rotation = 1.5708
scale = Vector2( 0.681479, 0.88423 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="ether 1"]
margin_left = 3.17444
margin_top = 43.8212
margin_right = 76.1744
margin_bottom = 66.8212
rect_rotation = -90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "ether 1"
align = 1
valign = 1

[node name="IP" type="Label" parent="ether 1"]
margin_left = 43.1362
margin_top = 186.453
margin_right = 102.136
margin_bottom = 230.453
rect_rotation = -90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "IP :"

[node name="Ether_IP_Input" type="LineEdit" parent="ether 1/IP"]
margin_left = 77.307
margin_top = -4.39636
margin_right = 280.307
margin_bottom = 47.6036
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
align = 1
max_length = 17
placeholder_text = "xxx.xxx.xxx.xx/xx"
caret_blink = true

[node name="GW" type="Label" parent="ether 1"]
margin_left = 105.337
margin_top = 186.453
margin_right = 175.337
margin_bottom = 230.453
rect_rotation = -90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
text = "GW :"

[node name="Ether_Gateway_Input" type="LineEdit" parent="ether 1/GW"]
margin_left = 77.307
margin_top = -4.39636
margin_right = 280.307
margin_bottom = 47.6036
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
align = 1
max_length = 15
placeholder_text = "xxx.xxx.xxx.xxx"
caret_blink = true

[node name="ether 2" type="Sprite" parent="."]
position = Vector2( 540.618, 475.084 )
rotation = 1.5708
scale = Vector2( 0.681479, 0.860396 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="ether 2"]
margin_left = 3.17438
margin_top = 32.0825
margin_right = 76.1744
margin_bottom = 55.0825
rect_rotation = -90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "ether 2"
align = 1
valign = 1

[node name="IP" type="Label" parent="ether 2"]
margin_left = -103.811
margin_top = 122.407
margin_right = 56.1891
margin_bottom = 149.407
rect_rotation = -90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 21 )
text = "IP (ETHER 2) :"

[node name="Label" type="Label" parent="ether 2/IP"]
margin_left = 163.718
margin_top = -5.56842
margin_right = 371.718
margin_bottom = 35.4316
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 23 )
custom_styles/normal = SubResource( 22 )
align = 1
script = ExtResource( 10 )

[node name="swicth" type="Sprite" parent="."]
position = Vector2( 682, 466 )
scale = Vector2( 0.147222, 0.126722 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="swicth"]
margin_left = -156.227
margin_top = 189.391
margin_right = 194.773
margin_bottom = 363.391
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "SWITCH"
align = 1
valign = 1

[node name="pc 1" type="Sprite" parent="."]
position = Vector2( 899, 207 )
scale = Vector2( 0.126667, 0.135236 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="pc 1"]
margin_left = -173.684
margin_top = 229.229
margin_right = 126.316
margin_bottom = 390.229
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "PC 1"
align = 1
valign = 1
uppercase = true

[node name="IP" type="Label" parent="pc 1"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 538.693
margin_top = -72.5111
margin_right = 807.693
margin_bottom = 141.489
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "IP :"

[node name="PC1_IP_Input" type="LineEdit" parent="pc 1/IP"]
margin_left = 576.104
margin_top = -29.872
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 14
placeholder_text = "xxx.xxx.xxx.xx"
caret_blink = true
caret_blink_speed = 0.1

[node name="SM" type="Label" parent="pc 1"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 538.692
margin_top = 252.845
margin_right = 880.692
margin_bottom = 466.845
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "SM :"

[node name="PC1_Subnet_Input" type="LineEdit" parent="pc 1/SM"]
margin_left = 576.105
margin_top = -29.872
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 15
placeholder_text = "xxx.xxx.xxx.xxx"
caret_blink = true
caret_blink_speed = 0.1

[node name="GW" type="Label" parent="pc 1"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 538.692
margin_top = 570.808
margin_right = 894.692
margin_bottom = 784.808
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "GW :"

[node name="PC1_Gateway_Input" type="LineEdit" parent="pc 1/GW"]
margin_left = 576.105
margin_top = -29.872
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 13
placeholder_text = "xxx.xxx.xxx.x"
caret_blink = true
caret_blink_speed = 0.1

[node name="DNS1" type="Label" parent="pc 1"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 538.692
margin_top = 881.376
margin_right = 1066.69
margin_bottom = 1095.38
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "DNS1 :"

[node name="PC1_DNS1_Input" type="LineEdit" parent="pc 1/DNS1"]
margin_left = 576.105
margin_top = -29.8719
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"
caret_blink = true
caret_blink_speed = 0.1

[node name="DNS2" type="Label" parent="pc 1"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 538.692
margin_top = 1214.13
margin_right = 1068.69
margin_bottom = 1428.13
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "DNS2 :"

[node name="PC1_DNS2_Input" type="LineEdit" parent="pc 1/DNS2"]
margin_left = 576.105
margin_top = -29.872
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"
caret_blink = true
caret_blink_speed = 0.1

[node name="pc 2" type="Sprite" parent="."]
position = Vector2( 893, 481 )
scale = Vector2( 0.126667, 0.135236 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="pc 2"]
margin_left = -173.684
margin_top = 229.229
margin_right = 126.316
margin_bottom = 390.229
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "PC 2"
align = 1
valign = 1
uppercase = true

[node name="IP" type="Label" parent="pc 2"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 586.062
margin_top = -65.1176
margin_right = 855.062
margin_bottom = 148.882
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "IP :"

[node name="PC2_IP_Input" type="LineEdit" parent="pc 2/IP"]
margin_left = 576.104
margin_top = -29.872
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 15
placeholder_text = "xxx.xxx.xxx.xxx"
caret_blink = true
caret_blink_speed = 0.1

[node name="SM" type="Label" parent="pc 2"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 586.061
margin_top = 260.239
margin_right = 928.061
margin_bottom = 474.239
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "SM :"

[node name="PC2_Subnet_Input" type="LineEdit" parent="pc 2/SM"]
margin_left = 576.105
margin_top = -29.872
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 15
placeholder_text = "xxx.xxx.xxx.xxx"
caret_blink = true
caret_blink_speed = 0.1

[node name="GW" type="Label" parent="pc 2"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 586.061
margin_top = 578.203
margin_right = 942.061
margin_bottom = 792.203
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "GW :"

[node name="PC2_Gateway_Input" type="LineEdit" parent="pc 2/GW"]
margin_left = 576.105
margin_top = -29.872
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 13
placeholder_text = "xxx.xxx.xxx.x"
caret_blink = true
caret_blink_speed = 0.1

[node name="DNS1" type="Label" parent="pc 2"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 586.061
margin_top = 888.77
margin_right = 1114.06
margin_bottom = 1102.77
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "DNS1 :"

[node name="PC2_DNS1_Input" type="LineEdit" parent="pc 2/DNS1"]
margin_left = 576.105
margin_top = -29.8719
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"
caret_blink = true
caret_blink_speed = 0.1

[node name="DNS2" type="Label" parent="pc 2"]
anchor_left = -0.09
anchor_top = -0.854
anchor_right = -0.09
anchor_bottom = -0.854
margin_left = 586.061
margin_top = 1221.52
margin_right = 1116.06
margin_bottom = 1435.52
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "DNS2 :"

[node name="PC2_DNS2_Input" type="LineEdit" parent="pc 2/DNS2"]
margin_left = 576.105
margin_top = -29.872
margin_right = 1981.11
margin_bottom = 221.128
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
align = 1
max_length = 7
placeholder_text = "x.x.x.x"
caret_blink = true
caret_blink_speed = 0.1

[node name="kabel" type="Sprite" parent="."]
position = Vector2( 141.75, 257.5 )
scale = Vector2( 0.699999, 0.632653 )
texture = ExtResource( 7 )

[node name="internet" type="Sprite" parent="."]
position = Vector2( 146, 172 )
scale = Vector2( 0.23, 0.199 )
texture = ExtResource( 3 )

[node name="kabel2" type="Sprite" parent="."]
position = Vector2( 143.875, 416 )
scale = Vector2( 0.749995, 0.489796 )
texture = ExtResource( 7 )

[node name="kabel3" type="Sprite" parent="."]
position = Vector2( 772.875, 333.5 )
scale = Vector2( 0.749987, 1.13061 )
texture = ExtResource( 7 )

[node name="kabel4" type="Sprite" parent="."]
position = Vector2( 786.711, 473.397 )
rotation = 1.5708
scale = Vector2( 0.70873, 0.563458 )
texture = ExtResource( 7 )

[node name="kabel5" type="Sprite" parent="."]
position = Vector2( 816.03, 194.603 )
rotation = 1.5708
scale = Vector2( 0.867474, 0.369377 )
texture = ExtResource( 7 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 1148, 626 )
scale = Vector2( 0.57513, 1.1875 )
normal = ExtResource( 8 )

[node name="Label" type="Label" parent="TouchScreenButton"]
anchor_left = 0.5
anchor_top = -0.635
anchor_right = 0.5
anchor_bottom = -0.635
margin_left = -30.5
margin_top = 19.32
margin_right = 37.5
margin_bottom = 52.32
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "QUIT"

[node name="SubmitButton" type="Button" parent="."]
margin_left = 549.0
margin_top = 579.0
margin_right = 692.0
margin_bottom = 617.0
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 25 )
custom_styles/normal = SubResource( 26 )
text = "SUBMIT"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 1076.0
margin_top = 32.0
margin_right = 1212.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 29 )
custom_styles/normal = SubResource( 27 )
align = 1
valign = 1

[node name="QuestionLabel" type="Label" parent="."]
margin_left = 272.0
margin_top = 29.0
margin_right = 899.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 30 )
custom_styles/normal = SubResource( 28 )
align = 1
valign = 1

[node name="TouchNEXT" type="TouchScreenButton" parent="."]
position = Vector2( 1023, 627 )
scale = Vector2( 0.569949, 1.1875 )
normal = ExtResource( 8 )

[node name="Label" type="Label" parent="TouchNEXT"]
margin_left = 49.1274
margin_top = -6.10352e-05
margin_right = 155.127
margin_bottom = 34.9999
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 32 )
text = "NEXT"
align = 1
valign = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
autoplay = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 85, 61 )
scale = Vector2( 0.19375, 0.182292 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -144.516
margin_top = -153.6
margin_right = 157.484
margin_bottom = 159.4
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 33 )
text = "LEVEL
1"
align = 1
valign = 1

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="TouchNEXT" to="." method="_on_TouchNEXT_pressed"]
